Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow  
  template:
    metadata:
      labels:
        app: wisecow  
    spec:
      containers:
      - name: wisecow-container
        image: sushrut2000/wisecow:latest
        ports:
        - containerPort: 4499
